<resources>
    <string name="app_name">Project1</string>
    <string name="new_game">New Game</string>
    <string name="done_button">DONE</string>
    <string name="undo_button">UNDO</string>
    <string name="surrender_button">SURRENDER</string>
    <string name="start_button">Start Game</string>
    <string name="player1">Player 1:</string>
    <string name="player2">Player 2:</string>
    <string name='player2text'>Player 2</string>
    <string name='player1text'>Player 1</string>
    <string name="welcome">Welcome to CSE 476\'s Connect4 Game!</string>
    <string name="winner_text"> is the winner!</string>
    <string name="replace_text">Replace This Text</string>
</resources>