<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ConnectActivity">

    <TextView
        android:id="@+id/playerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/player1text"
        android:textSize="40sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center">

        <edu.msu.zukebenj.project1.ConnectView
            android:id="@+id/connectView"
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#FFFFFF"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="onDone"
            android:text="@string/done_button"
            android:textColor="@color/design_default_color_background"
            tools:ignore="TextContrastCheck" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="onUndo"
            android:text="@string/undo_button"
            android:textColor="@color/design_default_color_background"
            tools:ignore="TextContrastCheck" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="onSurrender"
            android:text="@string/surrender_button"
            android:textColor="@color/design_default_color_background" />
    </LinearLayout>


</LinearLayout>